--- a/content/downloads/notebooks/2015-11-09-Scenario_1A_Model_Strings.ipynb
+++ b/content/downloads/notebooks/2015-11-09-Scenario_1A_Model_Strings.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b7d1d2743ece5451a4353784b47418f1c2925ac11bec008a531db5dd16424f93"
+  "signature": "sha256:6c79aab20f414045e812daccd3d1ebf630e6904f562f1387adea9b29e0c424d2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -87,14 +87,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "A common task is to search for what information is available for further research later on.\n",
+      "A common task is to find out what information is available for further research later on.\n",
       "\n",
-      "Programmatically we can build a list of strings to query common data catalogs and find out what services are available.\n",
-      "This post will show how to perform a query for for numerical models strings and try to answer the question: how many services are available in each catalog?\n",
+      "We can programmatically build a list of strings to query common data catalogs and find out what services are available.\n",
+      "This post will show how to perform a query for numerical models strings and try to answer the question: how many services are available in each catalog?\n",
       "\n",
       "To answers that question we will start by building a list of known catalogs [services](https://github.com/ioos/system-test/wiki/Service-Registries-and-Data-Catalogs).\n",
       "\n",
-      "([This post is part of Theme 1 - Scenario A](https://github.com/ioos/system-test/wiki/Development-of-Test-Themes#scenario1A))"
+      "([This post is part of Theme 1 - Scenario A.](https://github.com/ioos/system-test/wiki/Development-of-Test-Themes#scenario1A))"
      ]
     },
     {
@@ -129,22 +129,13 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "known_model_strings = ['roms', 'selfe', 'adcirc', 'ncom', 'hycom', 'fvcom',\n",
-      "                       'pom', 'wrams', 'wrf']"
+      "known_model_strings = ['roms', 'selfe', 'adcirc', 'ncom',\n",
+      "                       'hycom', 'fvcom', 'pom', 'wrams', 'wrf']"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
      "prompt_number": 4
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "### Searching for models via CSW 'keyword'\n",
-      "#### ConstrucThe FES filter we build below is simpler than what we did before.\n",
-      "We are only looking for matches in `Title` or `Subject`that contain the model strings.t CSW Filters"
-     ]
     },
     {
      "cell_type": "code",
@@ -632,12 +623,12 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We can note that some service types URNs for the same service type are being identified differently!\n",
+      "We can note that some identical services types URNs are being identified differently!\n",
       "\n",
       "There should be a consistent way of representing each service,\n",
       "or a [mapping](https://github.com/ioos/system-test/issues/57) needs to be made available.\n",
       "\n",
-      "We can try to get around the issue of the same services being identified differently by relying on the \"Scheme\" metadata field."
+      "We can try to get around the issue of the same services being identified differently by relying on the `\"Scheme\"` metadata field."
      ]
     },
     {
@@ -760,8 +751,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Query several catalogs like we did in this notebook is very slow.\n",
-      "This approach should be used only to help to determine which catalog we can use after we know what what type of data and service we need."
+      "Querying several catalogs like we did in this notebook is very slow.\n",
+      "This approach should be used only to help to determine which catalog we can use after we know what type of data and service we need."
      ]
     },
     {
