Added original notebook URL

--- a/content/downloads/notebooks/2015-09-28-OpeningPost.ipynb
+++ b/content/downloads/notebooks/2015-09-28-OpeningPost.ipynb
@@ -50,18 +50,7 @@
     "                                       os.pardir, '{}.md'.format(name)))\n",
     "\n",
     "with open('{}'.format(content), 'w') as f:\n",
-    "    f.writelines(markdown)\n",
-    "\n",
-    "\n",
-    "html = \"\"\"\n",
-    "<small>\n",
-    "<p> This post was written as an IPython notebook.  It is available for\n",
-    "<a href=\"http://ioos.github.com/system-test/downloads/\n",
-    "notebooks/%s.ipynb\">download</a> or as a static\n",
-    "<a href=\"http://nbviewer.ipython.org/url/ioos.github.com/\n",
-    "system-test/downloads/notebooks/%s.ipynb\">html</a>.</p>\n",
-    "<p></p>\n",
-    "\"\"\" % (name, name)"
+    "    f.writelines(markdown)"
    ]
   },
   {
