--- a/content/downloads/notebooks/2015-10-26-HF_Radar_Currents_west_coast.ipynb
+++ b/content/downloads/notebooks/2015-10-26-HF_Radar_Currents_west_coast.ipynb
@@ -23,7 +23,16 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/filipe/miniconda/envs/IOOS/lib/python2.7/site-packages/matplotlib/__init__.py:872: UserWarning: axes.color_cycle is deprecated and replaced with axes.prop_cycle; please use the latter.\n",
+      "  warnings.warn(self.msg_depr % (key, alt_key))\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "import seaborn\n",
@@ -69,8 +78,8 @@
     "<small>\n",
     "<p> This post was written as an IPython notebook.  It is available for\n",
     "<a href=\"http://ioos.github.com/system-test/downloads/\n",
-    "notebooks/%s.ipynb\">download</a> or\n",
-    "<a href=\"http://mybinder.org/repo/ioos/system-test/\">run it on binder</a>.</p>\n",
+    "notebooks/%s.ipynb\">download</a>.  You can also try an interactive version on\n",
+    "<a href=\"http://mybinder.org/repo/ioos/system-test/\">binder</a>.</p>\n",
     "<p></p>\n",
     "\"\"\" % (name)"
    ]
@@ -1157,12 +1166,12 @@
        "<small>\n",
        "<p> This post was written as an IPython notebook.  It is available for\n",
        "<a href=\"http://ioos.github.com/system-test/downloads/\n",
-       "notebooks/2015-10-26-HF_Radar_Currents_west_coast.ipynb\">download</a> or\n",
-       "<a href=\"http://mybinder.org/repo/ioos/system-test/\">run it on binder</a>.</p>\n",
+       "notebooks/2015-10-26-HF_Radar_Currents_west_coast.ipynb\">download</a>.  You can also try an interactive version on\n",
+       "<a href=\"http://mybinder.org/repo/ioos/system-test/\">binder</a>.</p>\n",
        "<p></p>\n"
       ],
       "text/plain": [
-       "<IPython.core.display.HTML at 0x7f7be804c5d0>"
+       "<IPython.core.display.HTML object>"
       ]
      },
      "execution_count": 22,
