--- a/content/downloads/notebooks/2015-11-09-Scenario_1A_Model_Strings.ipynb
+++ b/content/downloads/notebooks/2015-11-09-Scenario_1A_Model_Strings.ipynb
@@ -23,7 +23,16 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/filipe/miniconda/envs/IOOS/lib/python2.7/site-packages/matplotlib/__init__.py:872: UserWarning: axes.color_cycle is deprecated and replaced with axes.prop_cycle; please use the latter.\n",
+      "  warnings.warn(self.msg_depr % (key, alt_key))\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "import seaborn\n",
@@ -69,8 +78,8 @@
     "<small>\n",
     "<p> This post was written as an IPython notebook.  It is available for\n",
     "<a href=\"http://ioos.github.com/system-test/downloads/\n",
-    "notebooks/%s.ipynb\">download</a> or\n",
-    "<a href=\"http://mybinder.org/repo/ioos/system-test/\">run it on binder</a>.</p>\n",
+    "notebooks/%s.ipynb\">download</a>.  You can also try an interactive version on\n",
+    "<a href=\"http://mybinder.org/repo/ioos/system-test/\">binder</a>.</p>\n",
     "<p></p>\n",
     "\"\"\" % (name)"
    ]
@@ -437,7 +446,9 @@
    "metadata": {},
    "source": [
     "Querying several catalogs like we did in this notebook is very slow.\n",
-    "This approach should be used only to help to determine which catalog we can use after we know what type of data and service we need."
+    "This approach should be used only to help to determine which catalog we can use after we know what type of data and service we need.\n",
+    "\n",
+    "You can see the original IOOS System Test notebook [here](http://nbviewer.ipython.org/github/ioos/system-test/blob/master/Theme_1_Baseline/Scenario_1A_Model_Strings/Scenario_1A_Model_Strings.ipynb)."
    ]
   },
   {
@@ -454,12 +465,12 @@
        "<small>\n",
        "<p> This post was written as an IPython notebook.  It is available for\n",
        "<a href=\"http://ioos.github.com/system-test/downloads/\n",
-       "notebooks/2015-11-09-Scenario_1A_Model_Strings.ipynb\">download</a> or\n",
-       "<a href=\"http://mybinder.org/repo/ioos/system-test/\">run it on binder</a>.</p>\n",
+       "notebooks/2015-11-09-Scenario_1A_Model_Strings.ipynb\">download</a>.  You can also try an interactive version on\n",
+       "<a href=\"http://mybinder.org/repo/ioos/system-test/\">binder</a>.</p>\n",
        "<p></p>\n"
       ],
       "text/plain": [
-       "<IPython.core.display.HTML at 0x7ff8d579ae50>"
+       "<IPython.core.display.HTML object>"
       ]
      },
      "execution_count": 13,
