--- a/index.ipynb
+++ b/index.ipynb
@@ -17,7 +17,8 @@
     "  2. [2015-10-12-fetching_data.ipynb](content/downloads/notebooks/2015-10-12-fetching_data.ipynb)\n",
     "  3. [2015-10-26-HF_Radar_Currents_west_coast.ipynb](content/downloads/notebooks/2015-10-26-HF_Radar_Currents_west_coast.ipynb)\n",
     "  4. [2015-11-09-Scenario_1A_Model_Strings.ipynb](content/downloads/notebooks/2015-11-09-Scenario_1A_Model_Strings.ipynb)\n",
-    "  5. [2015-11-23-NGDC_CSW_QueryForIOOSRAs.ipynb](content/downloads/notebooks/2015-11-23-NGDC_CSW_QueryForIOOSRAs.ipynb)"
+    "  5. [2015-11-23-NGDC_CSW_QueryForIOOSRAs.ipynb](content/downloads/notebooks/2015-11-23-NGDC_CSW_QueryForIOOSRAs.ipynb)\n",
+    "  6. [2015-12-07-NGDC_CSW_QueryForIOOSRAs_UUID.ipynb](content/downloads/notebooks/2015-12-07-NGDC_CSW_QueryForIOOSRAs_UUID.ipynb)"
    ]
   }
  ],
