--- a/content/downloads/notebooks/2015-12-07-NGDC_CSW_QueryForIOOSRAs_UUID.ipynb
+++ b/content/downloads/notebooks/2015-12-07-NGDC_CSW_QueryForIOOSRAs_UUID.ipynb
@@ -14,7 +14,7 @@
     "Created by Emilio Mayorga, 2/10/2014\n",
     "\"\"\"\n",
     "\n",
-    "title = 'Catalog based search for the IOOS Regional Associations using UUID'\n",
+    "title = 'Catalog-based search for the IOOS Regional Associations using UUID'\n",
     "name = '2015-12-07-NGDC_CSW_QueryForIOOSRAs_UUID'"
    ]
   },
@@ -29,7 +29,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/filipe/miniconda/envs/IOOS/lib/python2.7/site-packages/matplotlib/__init__.py:872: UserWarning: axes.color_cycle is deprecated and replaced with axes.prop_cycle; please use the latter.\n",
+      "/home/filipe/miniconda/envs/ioos_blog/lib/python2.7/site-packages/matplotlib/__init__.py:872: UserWarning: axes.color_cycle is deprecated and replaced with axes.prop_cycle; please use the latter.\n",
       "  warnings.warn(self.msg_depr % (key, alt_key))\n"
      ]
     }
@@ -156,12 +156,11 @@
    "metadata": {},
    "source": [
     "The function below is similar to the one we used before.\n",
-    "Note the same matching (`PropertyIsEqualTo`),\n",
+    "Note the same matching `PropertyIsEqualTo`,\n",
     "but different property name (`sys.siteuuid` rather than `apiso:Keywords`).\n",
     "\n",
-    "That is the key difference for the robustness of the search,\n",
-    "keywords are not always defined and might return bogus matching.\n",
-    "While UUID will always mean one RA."
+    "That is the key difference for the robustness of the search.\n",
+    "Whereas keywords are not always defined, and might return bogus matching, UUID will always mean one RA."
    ]
   },
   {
@@ -174,8 +173,8 @@
    "source": [
     "from owslib.fes import PropertyIsEqualTo\n",
     "\n",
-    "def query_ra(csw, uuid='B3EA8869-B726-4E39-898A-299E53ABBC98'):\n",
-    "    q = PropertyIsEqualTo(propertyname='sys.siteuuid', literal='{%s}' % uuid)\n",
+    "def query_ra(csw, uuid):\n",
+    "    q = PropertyIsEqualTo(propertyname='sys.siteuuid', literal='%s' % uuid)\n",
     "    csw.getrecords2(constraints=[q], maxrecords=2000, esn='full')\n",
     "    return csw"
    ]
@@ -213,7 +212,7 @@
    "source": [
     "for ra in ioos_ras:\n",
     "    try:\n",
-    "        uuid = df.ix[ra]['UUID'].strip('{').strip('}')\n",
+    "        uuid = df.ix[ra]['UUID']\n",
     "        csw = query_ra(csw, uuid)\n",
     "        ret = csw.results['returned']\n",
     "        word = 'records' if ret > 1 else 'record'\n",
@@ -227,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compare the results above with `cell [6]` [from before](https://ioos.github.io/system-test/blog/2015/11/23/NGDC_CSW_QueryForIOOSRAs/).  Note that now we got 192 for PacIOOS and 74 for AOOS now!\n",
+    "Compare the results above with `cell [6]` [from before](https://ioos.github.io/system-test/blog/2015/11/23/NGDC_CSW_QueryForIOOSRAs/).  Note that now we got 192 records for PacIOOS and 74 for AOOS!\n",
     "\n",
     "You can see the original notebook [here](https://www.wakari.io/sharing/bundle/emayorga/NGDC_CSW_QueryForIOOSRAs_UUID)."
    ]
@@ -251,7 +250,7 @@
        "<p></p>\n"
       ],
       "text/plain": [
-       "<IPython.core.display.HTML object>"
+       "<IPython.core.display.HTML at 0x7f00310c7650>"
       ]
      },
      "execution_count": 7,
